Correction in chat data ess reference, created notebook for final analysis pipeline

--- a/notebooks/Hamish/Create standard chat data.ipynb
+++ b/notebooks/Hamish/Create standard chat data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -75,13 +75,13 @@
     "# Calculate epworth sleepiness score\n",
     "data_temp = pd.Series(np.zeros(data_chat.shape[0]))\n",
     "for i in range(1,11):\n",
-    "    data_temp = data['SLS'+str(i)]\n",
+    "    data_temp = data_temp + data['SLS'+str(i)]\n",
     "data_chat['reference: ess'] = data_temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -102,14 +102,15 @@
     "data_chat = data_chat[idx_no_ess]\n",
     "\n",
     "# Select columns to imput NaNs as zeros\n",
-    "impute_zeros_cols = ['tonsilsize_3-4', 'zscore', 'allergies_Yes', 'asthma_Yes', 'gerd_Yes', 'ethnicity_Hispanic']\n",
+    "impute_zeros_cols = ['tonsilsize_3-4', 'zscore', 'allergies_Yes', \\\n",
+    "'asthma_Yes', 'gerd_Yes', 'ethnicity_Hispanic', 'term']\n",
     "for col in impute_zeros_cols:\n",
     "    data_chat[col].fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +128,7 @@
       "age                 445.0   6.566292   1.402455   5.000000   5.000000   \n",
       "bmi                 445.0  18.956225   4.866325  12.490000  15.240000   \n",
       "zscore              445.0   0.847348   1.288120  -3.460000  -0.040000   \n",
-      "term                444.0   0.936937   8.317926   0.000000   0.000000   \n",
+      "term                445.0   0.934831   8.308672   0.000000   0.000000   \n",
       "allergies_Yes       445.0   0.404494   0.491346   0.000000   0.000000   \n",
       "asthma_Yes          445.0   0.242697   0.429196   0.000000   0.000000   \n",
       "gerd_Yes            445.0   0.004494   0.066965   0.000000   0.000000   \n",
@@ -147,7 +148,7 @@
       "ohi                 445.0   4.632120   4.076301   0.000000   1.848049   \n",
       "reference: osa18    445.0  53.510112  18.514373  18.000000  40.000000   \n",
       "reference: psq      445.0   0.489607   0.178805   0.045455   0.363636   \n",
-      "reference: ess      445.0   0.155056   0.502922   0.000000   0.000000   \n",
+      "reference: ess      445.0   7.689888   5.446547   0.000000   4.000000   \n",
       "\n",
       "                          50%        75%         max  \n",
       "ahi                  4.720000   8.750000   29.300000  \n",
@@ -178,7 +179,7 @@
       "ohi                  3.355705   6.451613   24.279661  \n",
       "reference: osa18    51.000000  65.000000  123.000000  \n",
       "reference: psq       0.500000   0.631579    0.950000  \n",
-      "reference: ess       0.000000   0.000000    3.000000  \n"
+      "reference: ess       7.000000  11.000000   28.000000  \n"
      ]
     }
    ],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
