--- a/notebooks/Hamish/Making data/Create standard chat data.ipynb
+++ b/notebooks/Hamish/Making data/Create standard chat data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -11,13 +11,12 @@
     "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from getpass import getuser\n",
-    "import os"
+    "from sklearn.model_selection import StratifiedKFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -35,53 +34,53 @@
     "use_cols = use_cols + ['SLS'+str(i) for i in range(1,11)]\n",
     "\n",
     "# Load data\n",
-    "data_file = '/Users/' + getuser() + '/Documents/Rhodes/RAIL/chat/datasets/chat-baseline-dataset-0.7.0.csv'\n",
+    "data_file = '../../../data/original/chat-baseline-dataset-0.7.0.csv'\n",
     "data = pd.read_csv(data_file, usecols=use_cols)\n",
     "\n",
     "# Create dataset similar to UMD\n",
-    "data_chat = pd.DataFrame()\n",
-    "data_chat['ahi'] = data['QSAHI'].copy()\n",
-    "data_chat['rem'] = data['TIMEREMP']\n",
-    "data_chat['nrem'] = (data['NREMEPBP'] + data['NREMEPOP'])/data['SLPTIME']\n",
-    "data_chat['tonsilsize_3-4'] = data['TONSIZE'].replace(to_replace=[1,2], value=[0,1])\n",
-    "data_chat['gender_Male'] = data['male']\n",
-    "data_chat['age'] = data['AGEYEAR_AT_MEAS']\n",
-    "data_chat['bmi'] = data['ANT5']\n",
-    "data_chat['zscore'] = data['ANT5A']\n",
-    "data_chat['term'] = data['MED6']\n",
-    "data_chat['allergies_Yes'] = data['MED2']\n",
-    "data_chat['asthma_Yes'] = data['MED1C4']\n",
-    "data_chat['gerd_Yes'] = data['MED1G4']\n",
-    "data_chat['ethnicity_Hispanic'] = data['REF5'].replace(to_replace=[2], value=[0])\n",
-    "data_chat['ethnicity_White'] = 0\n",
-    "data_chat.loc[data['REF4']==5,'ethnicity_White'] = 1\n",
-    "data_chat['ethnicity_Black'] = 0\n",
-    "data_chat.loc[data['REF4']==4,'ethnicity_Black'] = 1\n",
-    "data_chat['ethnicity_Asian'] = 0\n",
-    "data_chat.loc[data['REF4']==2,'ethnicity_Asian'] = 1\n",
-    "data_chat['tst50co2'] = data['NOVA_EST_PCTCO2G50']\n",
-    "data_chat['sleepefficiency'] = data['SLP_EFF']\n",
-    "data_chat['arousali'] = data['AI_ALL']\n",
-    "data_chat['oai'] = data['QSOAI']\n",
-    "data_chat['cai'] = data['CAI']\n",
-    "data_chat['tb90'] = tb90 = data['PCTSA90H']*data['SLPTIME']/100\n",
-    "data_chat['lowsao2'] = data['MINSAT']\n",
-    "data_chat['peakc02'] = data['CO2PEAK']\n",
-    "data_chat['oahi'] = data['OAHI3']\n",
-    "data_chat['ohi'] = data['HI']\n",
-    "data_chat['reference: osa18'] = data['OSAS18']\n",
-    "data_chat['reference: psq'] = data['TOTALPSQ']\n",
+    "chat_data = pd.DataFrame()\n",
+    "chat_data['ahi'] = data['QSAHI'].copy()\n",
+    "chat_data['rem'] = data['TIMEREMP']\n",
+    "chat_data['nrem'] = (data['NREMEPBP'] + data['NREMEPOP'])/data['SLPTIME']\n",
+    "chat_data['tonsilsize_3-4'] = data['TONSIZE'].replace(to_replace=[1,2], value=[0,1])\n",
+    "chat_data['gender_Male'] = data['male']\n",
+    "chat_data['age'] = data['AGEYEAR_AT_MEAS']\n",
+    "chat_data['bmi'] = data['ANT5']\n",
+    "chat_data['zscore'] = data['ANT5A']\n",
+    "chat_data['term'] = data['MED6'].replace(to_replace=[88], value=[0])\n",
+    "chat_data['allergies_Yes'] = data['MED2']\n",
+    "chat_data['asthma_Yes'] = data['MED1C4']\n",
+    "chat_data['gerd_Yes'] = data['MED1G4']\n",
+    "chat_data['ethnicity_Hispanic'] = data['REF5'].replace(to_replace=[2], value=[0])\n",
+    "chat_data['ethnicity_White'] = 0\n",
+    "chat_data.loc[data['REF4']==5,'ethnicity_White'] = 1\n",
+    "chat_data['ethnicity_Black'] = 0\n",
+    "chat_data.loc[data['REF4']==4,'ethnicity_Black'] = 1\n",
+    "chat_data['ethnicity_Asian'] = 0\n",
+    "chat_data.loc[data['REF4']==2,'ethnicity_Asian'] = 1\n",
+    "chat_data['tst50co2'] = data['NOVA_EST_PCTCO2G50']\n",
+    "chat_data['sleepefficiency'] = data['SLP_EFF']\n",
+    "chat_data['arousali'] = data['AI_ALL']\n",
+    "chat_data['oai'] = data['QSOAI']\n",
+    "chat_data['cai'] = data['CAI']\n",
+    "chat_data['tb90'] = tb90 = data['PCTSA90H']*data['SLPTIME']/100\n",
+    "chat_data['lowsao2'] = data['MINSAT']\n",
+    "chat_data['peakc02'] = data['CO2PEAK']\n",
+    "chat_data['oahi'] = data['OAHI3']\n",
+    "chat_data['ohi'] = data['HI']\n",
+    "chat_data['reference: osa18'] = data['OSAS18']\n",
+    "chat_data['reference: psq'] = data['TOTALPSQ']\n",
     "\n",
     "# Calculate epworth sleepiness score\n",
-    "data_temp = pd.Series(np.zeros(data_chat.shape[0]))\n",
+    "data_temp = pd.Series(np.zeros(chat_data.shape[0]))\n",
     "for i in range(1,11):\n",
     "    data_temp = data_temp + data['SLS'+str(i)]\n",
-    "data_chat['reference: ess'] = data_temp"
+    "chat_data['reference: ess'] = data_temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -90,27 +89,30 @@
     "# Deal with missing data\n",
     "\n",
     "# Remove patients without AHI\n",
-    "idx_no_ahi = ~data_chat['ahi'].apply(np.isnan)\n",
-    "data_chat = data_chat[idx_no_ahi]\n",
+    "idx_no_ahi = ~chat_data['ahi'].apply(np.isnan)\n",
+    "chat_data = chat_data[idx_no_ahi]\n",
     "\n",
     "# Remove patients without reference data\n",
-    "idx_no_osa18 = ~data_chat['reference: osa18'].apply(np.isnan)\n",
-    "data_chat = data_chat[idx_no_osa18]\n",
-    "idx_no_psq = ~data_chat['reference: psq'].apply(np.isnan)\n",
-    "data_chat = data_chat[idx_no_psq]\n",
-    "idx_no_ess = ~data_chat['reference: ess'].apply(np.isnan)\n",
-    "data_chat = data_chat[idx_no_ess]\n",
+    "idx_no_osa18 = ~chat_data['reference: osa18'].apply(np.isnan)\n",
+    "chat_data = chat_data[idx_no_osa18]\n",
+    "idx_no_psq = ~chat_data['reference: psq'].apply(np.isnan)\n",
+    "chat_data = chat_data[idx_no_psq]\n",
+    "idx_no_ess = ~chat_data['reference: ess'].apply(np.isnan)\n",
+    "chat_data = chat_data[idx_no_ess]\n",
     "\n",
     "# Select columns to imput NaNs as zeros\n",
     "impute_zeros_cols = ['tonsilsize_3-4', 'zscore', 'allergies_Yes', \\\n",
     "'asthma_Yes', 'gerd_Yes', 'ethnicity_Hispanic', 'term']\n",
     "for col in impute_zeros_cols:\n",
-    "    data_chat[col].fillna(0, inplace=True)"
+    "    chat_data[col].fillna(0, inplace=True)\n",
+    "\n",
+    "# Reset index\n",
+    "chat_data = chat_data.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +130,7 @@
       "age                 445.0   6.566292   1.402455   5.000000   5.000000   \n",
       "bmi                 445.0  18.956225   4.866325  12.490000  15.240000   \n",
       "zscore              445.0   0.847348   1.288120  -3.460000  -0.040000   \n",
-      "term                445.0   0.934831   8.308672   0.000000   0.000000   \n",
+      "term                445.0   0.143820   0.351302   0.000000   0.000000   \n",
       "allergies_Yes       445.0   0.404494   0.491346   0.000000   0.000000   \n",
       "asthma_Yes          445.0   0.242697   0.429196   0.000000   0.000000   \n",
       "gerd_Yes            445.0   0.004494   0.066965   0.000000   0.000000   \n",
@@ -159,7 +161,7 @@
       "age                  6.000000   8.000000   10.000000  \n",
       "bmi                 17.090000  21.820000   37.410000  \n",
       "zscore               0.840000   1.970000    3.070000  \n",
-      "term                 0.000000   0.000000   88.000000  \n",
+      "term                 0.000000   0.000000    1.000000  \n",
       "allergies_Yes        0.000000   1.000000    1.000000  \n",
       "asthma_Yes           0.000000   0.000000    1.000000  \n",
       "gerd_Yes             0.000000   0.000000    1.000000  \n",
@@ -185,33 +187,53 @@
    ],
    "source": [
     "# Summarise data\n",
-    "summary = data_chat.describe()\n",
+    "summary = chat_data.describe()\n",
     "summary = summary.transpose()\n",
     "print(summary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create train and test split\n",
+    "chat_ahi = pd.Series(chat_data['ahi']>5, index=chat_data.index)\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=2, random_state=None, shuffle=False)\n",
+    "n_samples = chat_data.shape[0]\n",
+    "kfold_index = [[i, j] for i, j in skf.split(np.zeros(n_samples), chat_ahi)]\n",
+    "chat_train = chat_data.loc[kfold_index[1][0]]\n",
+    "chat_test = chat_data.loc[kfold_index[1][1]]\n",
+    "chat_train = chat_train.reset_index(drop=True)\n",
+    "chat_test = chat_test.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Save data\n",
-    "output_path_base = '/Users/' + getuser() + '/Documents/Rhodes/RAIL/apnea_dev/data'\n",
+    "chat_train_file = '../../../data/processed/chat_data_standard_train.csv'\n",
+    "chat_test_file = '../../../data/processed/chat_data_standard_test.csv'\n",
+    "chat_all_file = '../../../data/processed/chat_data_standard_all.csv'\n",
     "\n",
-    "if not os.path.exists(output_path_base):\n",
-    "    os.makedirs(output_path_base)\n",
-    "\n",
-    "output_path = os.path.join(output_path_base,'chat_data_standard.csv')\n",
-    "data_chat.to_csv(output_path, index_label=False)"
+    "chat_data.to_csv(chat_all_file, index_label=False)\n",
+    "chat_train.to_csv(chat_train_file, index_label=False)\n",
+    "chat_test.to_csv(chat_test_file, index_label=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
