Have all model results including kang et al

--- a/notebooks/Hamish/Making data/Create standard UMD data.ipynb
+++ b/notebooks/Hamish/Making data/Create standard UMD data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -11,12 +11,13 @@
     "# Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import StratifiedKFold"
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "import CreateData"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +59,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get Kang data\n",
+    "kang_data_file = '/workdir/data/original/UMD Sleep Apnea data.xls'\n",
+    "X, y = CreateData.CreateData(kang_data_file)\n",
+    "kang_data = X.copy()\n",
+    "kang_data['test'] = y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         bmi    zscore        age  premature  Male  Black  White  Hispanic  \\\n",
+      "0  25.929191  4.920000   3.093771          0     1      0      1         0   \n",
+      "1  31.462240  4.927145   4.550308          0     1      0      0         1   \n",
+      "2  36.104691  4.990000   4.678987          0     1      0      0         1   \n",
+      "3  69.219425  3.460000  16.953425          0     1      1      0         0   \n",
+      "4  50.974365  3.160000  17.120548          0     1      1      0         0   \n",
+      "\n",
+      "   no_allergies  no_asthma  no_gerd  tsize2  tsize3  tsize4   test  \n",
+      "0             0          0        1       0       1       0  False  \n",
+      "1             1          1        1       0       1       0   True  \n",
+      "2             0          0        1       1       0       0   True  \n",
+      "3             1          1        1       0       1       0   True  \n",
+      "4             1          1        1       0       1       0   True  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kang_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -135,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -150,14 +197,18 @@
     "umd_train = umd_data.loc[kfold_index[1][0]]\n",
     "umd_test = umd_data.loc[kfold_index[1][1]]\n",
     "umd_train = umd_train.reset_index(drop=True)\n",
-    "umd_test = umd_test.reset_index(drop=True)"
+    "umd_test = umd_test.reset_index(drop=True)\n",
+    "kang_train = kang_data.loc[kfold_index[1][0]]\n",
+    "kang_test = kang_data.loc[kfold_index[1][1]]\n",
+    "kang_train = kang_train.reset_index(drop=True)\n",
+    "kang_test = kang_test.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -166,10 +217,27 @@
     "umd_test_file = '../../../data/processed/umd_data_standard_test.csv'\n",
     "umd_all_file = '../../../data/processed/umd_data_standard_all.csv'\n",
     "\n",
+    "kang_train_file = '../../../data/processed/kang_data_train.csv'\n",
+    "kang_test_file = '../../../data/processed/kang_data_test.csv'\n",
+    "kang_all_file = '../../../data/processed/kang_data_all.csv'\n",
+    "\n",
     "umd_data.to_csv(umd_all_file, index_label=False)\n",
     "umd_train.to_csv(umd_train_file, index_label=False)\n",
-    "umd_test.to_csv(umd_test_file, index_label=False)"
+    "umd_test.to_csv(umd_test_file, index_label=False)\n",
+    "\n",
+    "kang_data.to_csv(kang_all_file, index_label=False)\n",
+    "kang_train.to_csv(kang_train_file, index_label=False)\n",
+    "kang_test.to_csv(kang_test_file, index_label=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
