--- a/notebooks/Hamish/Test model chat.ipynb
+++ b/notebooks/Hamish/Test model chat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -32,13 +32,13 @@
     "# Import bespoke\n",
     "import rail_utils\n",
     "from rail_utils import PlotModels\n",
-    "# import PointsModel\n",
+    "import PointsModel\n",
     "import rail_utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -104,13 +104,13 @@
     "ytest = ytest_orig.copy()\n",
     "xtest = xtest_orig.copy()\n",
     "\n",
-    "models = {'best_model': svm.SVC(probability=True, kernel='linear')}\n",
+    "models = {'best_model': svm.SVC(probability=True, kernel='linear'), 'kang_model': PointsModel.PointsModel()}\n",
     "\n",
     "pipeline = [[preprocessing.StandardScaler(), continuous_variables], [PCA(n_components=10), 'all']]\n",
     "\n",
-    "best_model = PlotModels(models=models, pipeline=pipeline)\n",
+    "test_models = PlotModels(models=models, pipeline=pipeline)\n",
     "\n",
-    "[xtrain, ytrain], [xtest, ytest] = best_model._process_pipeline([xtrain, ytrain], [xtest, ytest])\n",
+    "[xtrain, ytrain], [xtest, ytest] = test_models._process_pipeline([xtrain, ytrain], [xtest, ytest])\n",
     "\n",
     "# Test cross-validation score on training set\n",
     "auroc_scores = cross_val_score(models['best_model'], xtrain, ytrain, cv=5, scoring ='roc_auc')\n",
@@ -126,7 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Model train and test\n",
+    "\n",
+    "models['best_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['best_model'].predict_proba(xtest)[:, 1]\n",
+    "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
+    "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
+    "test_models._plot_vars['best_model'] = [fpr, tpr, auc, '']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test kang model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -135,21 +159,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_model (AUC: 0.570, Sens: 0.766, Spec: 0.409)\n"
+      "Warning: Maximum number of iterations has been exceeded.\n",
+      "         Current function value: 0.640050\n",
+      "         Iterations: 35\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.679176\n",
+      "         Iterations 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/statsmodels/base/model.py:496: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
      ]
     }
    ],
    "source": [
-    "# Model train and test\n",
+    "ytrain = ytrain_orig.copy()\n",
+    "xtrain = xtrain_orig.copy()\n",
+    "ytest = ytest_orig.copy()\n",
+    "xtest = xtest_orig.copy()\n",
     "\n",
-    "models['best_model'].fit(xtrain, ytrain)\n",
-    "pred_proba = models['best_model'].predict_proba(xtest)[:, 1]\n",
+    "models['kang_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['kang_model'].predict_proba(xtest)[:, 1]\n",
     "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
     "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
-    "best_model._plot_vars['best_model'] = [fpr, tpr, auc, '']\n",
-    "best_model._make_label()\n",
-    "\n",
-    "print(best_model._plot_vars['best_model'][3])"
+    "test_models._plot_vars['kang_model'] = [fpr, tpr, auc, '']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best_model (AUC: 0.570, Sens: 0.766, Spec: 0.409)\n",
+      "kang_model (AUC: 0.359, Sens: 0.000, Spec: 1.000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_models._make_label()\n",
+    "print(test_models._plot_vars['best_model'][3])\n",
+    "print(test_models._plot_vars['kang_model'][3])"
    ]
   },
   {
@@ -161,9 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -171,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "reference: osa18 --> Sensitivity = 0.449, Specificity = 0.730\n",
-      "Match sensitivity for reference: osa18 --> Sensitivity = 0.458, Specificity = 0.600\n",
+      "Match sensitivity for reference: osa18 --> Sensitivity = 0.477, Specificity = 0.600\n",
       "Match specificity for reference: osa18 --> Sensitivity = 0.299, Specificity = 0.730\n",
       "\n",
       "reference: psq --> Sensitivity = 0.841, Specificity = 0.287\n",
@@ -186,6 +246,20 @@
     }
    ],
    "source": [
+    "ytrain = ytrain_orig.copy()\n",
+    "xtrain = xtrain_orig.copy()\n",
+    "ytest = ytest_orig.copy()\n",
+    "xtest = xtest_orig.copy()\n",
+    "\n",
+    "[xtrain, ytrain], [xtest, ytest] = test_models._process_pipeline([xtrain, ytrain], [xtest, ytest])\n",
+    "\n",
+    "models['best_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['best_model'].predict_proba(xtest)[:, 1]\n",
+    "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
+    "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
+    "test_models._plot_vars['best_model'] = [fpr, tpr, auc, '']\n",
+    "\n",
+    "\n",
     "ref_sens_spec = {ref_metric: [] for ref_metric in reference_variables}\n",
     "\n",
     "for ref_metric in reference_variables:\n",
