--- a/notebooks/Hamish/Test model umd.ipynb
+++ b/notebooks/Hamish/Test model umd.ipynb
@@ -4,14 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook to test the chosen umd model on the held out umd data\n",
-    "\n",
-    "### To do: Implement Logan's model for all test scenarios"
+    "# Notebook to test the chosen umd model on the held out umd data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -39,8 +37,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load UMD data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
@@ -79,12 +84,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Load Kang data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# kang_train_file = '../../data/processed/kang_data_train.csv'\n",
+    "# kang_train_data = pd.read_csv(kang_train_file)\n",
+    "# kang_test_file = '../../data/processed/kang_data_test.csv'\n",
+    "# kang_test_data = pd.read_csv(kang_test_file)\n",
+    "\n",
+    "# kang_final_variables = list(set(kang_train_data.columns) - set(['test']))\n",
+    "\n",
+    "# xtrain_kang = kang_train_data[kang_final_variables].copy()\n",
+    "# ytrain_kang = kang_train_data['test'].copy()\n",
+    "# xtest_kang = kang_test_data[kang_final_variables].copy()\n",
+    "# ytest_kang = kang_test_data['test'].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Set up model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -103,8 +136,8 @@
     "ytest = ytest_orig.copy()\n",
     "xtest = xtest_orig.copy()\n",
     "\n",
-    "# models = {'best_model': LogisticRegression(penalty='l1'), 'kang_model': PointsModel.PointsModel()}\n",
-    "models = {'best_model': LogisticRegression(penalty='l1')}\n",
+    "models = {'best_model': LogisticRegression(penalty='l1'), 'kang_model': PointsModel.PointsModel()}\n",
+    "# models = {'best_model': LogisticRegression(penalty='l1')}\n",
     "\n",
     "pipeline = [[preprocessing.StandardScaler(), continuous_variables],\n",
     "            [preprocessing.PolynomialFeatures(degree=2), 'from before'],\n",
@@ -128,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -150,23 +183,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.555385\n",
+      "         Iterations 6\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.563906\n",
+      "         Iterations 6\n"
+     ]
+    }
+   ],
    "source": [
-    "# ytrain = ytrain_orig.copy()\n",
-    "# xtrain = xtrain_orig.copy()\n",
-    "# ytest = ytest_orig.copy()\n",
-    "# xtest = xtest_orig.copy()\n",
+    "ytrain = ytrain_orig.copy()\n",
+    "xtrain = xtrain_orig.copy()\n",
+    "ytest = ytest_orig.copy()\n",
+    "xtest = xtest_orig.copy()\n",
     "\n",
-    "\n",
-    "# models['kang_model'].fit(xtrain, ytrain)\n",
-    "# pred_proba = models['kang_model'].predict_proba(xtest)[:, 1]\n",
-    "# auc = metrics.roc_auc_score(ytest, pred_proba)\n",
-    "# fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
-    "# test_models._plot_vars['kang_model'] = [fpr, tpr, auc, '']"
+    "models['kang_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['kang_model'].predict_proba(xtest)[:, 1]\n",
+    "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
+    "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
+    "test_models._plot_vars['kang_model'] = [fpr, tpr, auc, '']"
    ]
   },
   {
@@ -178,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -187,14 +232,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_model (AUC: 0.773, Sens: 0.620, Spec: 0.881)\n"
+      "best_model (AUC: 0.773, Sens: 0.620, Spec: 0.881)\n",
+      "kang_model (AUC: 0.285, Sens: 0.000, Spec: 1.000)\n"
      ]
     }
    ],
    "source": [
     "test_models._make_label()\n",
     "print(test_models._plot_vars['best_model'][3])\n",
-    "# print(test_models._plot_vars['kang_model'][3])"
+    "print(test_models._plot_vars['kang_model'][3])"
    ]
   }
  ],
