--- a/notebooks/Hamish/Test umd model on chat.ipynb
+++ b/notebooks/Hamish/Test umd model on chat.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -27,14 +27,21 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Import bespoke\n",
-    "# import PointsModel\n",
+    "import PointsModel\n",
     "import rail_utils\n",
     "from rail_utils import PlotModels"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load UMD data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -100,15 +107,15 @@
     "ytest = ytest_orig.copy()\n",
     "xtest = xtest_orig.copy()\n",
     "\n",
-    "models = {'best_model': LogisticRegression(penalty='l1')}\n",
+    "models = {'best_model': LogisticRegression(penalty='l1'), 'kang_model': PointsModel.PointsModel()}\n",
     "\n",
     "pipeline = [[preprocessing.StandardScaler(), continuous_variables],\n",
     "            [preprocessing.PolynomialFeatures(degree=2), 'from before'],\n",
     "            [PCA(n_components=6), 'from before']]\n",
     "\n",
-    "best_model = PlotModels(models=models, pipeline=pipeline)\n",
+    "test_models = PlotModels(models=models, pipeline=pipeline)\n",
     "\n",
-    "[xtrain, ytrain], [xtest, ytest] = best_model._process_pipeline([xtrain, ytrain], [xtest, ytest])\n",
+    "[xtrain, ytrain], [xtest, ytest] = test_models._process_pipeline([xtrain, ytrain], [xtest, ytest])\n",
     "\n",
     "# Test cross-validation score on training set\n",
     "auroc_scores = cross_val_score(models['best_model'], xtrain, ytrain, cv=5, scoring ='roc_auc')\n",
@@ -124,7 +131,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Model train and test\n",
+    "models['best_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['best_model'].predict_proba(xtest)[:, 1]\n",
+    "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
+    "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
+    "test_models._plot_vars['best_model'] = [fpr, tpr, auc, '']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test kang model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -133,21 +163,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_model (AUC: 0.552, Sens: 0.458, Spec: 0.632)\n"
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.605563\n",
+      "         Iterations 5\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.608981\n",
+      "         Iterations 5\n"
      ]
     }
    ],
    "source": [
-    "# Model train and test\n",
+    "ytrain = ytrain_orig.copy()\n",
+    "xtrain = xtrain_orig.copy()\n",
+    "ytest = ytest_orig.copy()\n",
+    "xtest = xtest_orig.copy()\n",
     "\n",
-    "models['best_model'].fit(xtrain, ytrain)\n",
-    "pred_proba = models['best_model'].predict_proba(xtest)[:, 1]\n",
+    "models['kang_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['kang_model'].predict_proba(xtest)[:, 1]\n",
     "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
     "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
-    "best_model._plot_vars['best_model'] = [fpr, tpr, auc, '']\n",
-    "best_model._make_label()\n",
-    "\n",
-    "print(best_model._plot_vars['best_model'][3])"
+    "test_models._plot_vars['kang_model'] = [fpr, tpr, auc, '']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print model results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best_model (AUC: 0.575, Sens: 0.570, Spec: 0.576)\n",
+      "kang_model (AUC: 0.415, Sens: 0.042, Spec: 0.974)\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_models._make_label()\n",
+    "print(test_models._plot_vars['best_model'][3])\n",
+    "print(test_models._plot_vars['kang_model'][3])"
    ]
   },
   {
@@ -159,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -169,21 +233,26 @@
      "output_type": "stream",
      "text": [
       "reference: osa18 --> Sensitivity = 0.360, Specificity = 0.701\n",
-      "Match sensitivity for reference: osa18 --> Sensitivity = 0.360, Specificity = 0.714\n",
-      "Match specificity for reference: osa18 --> Sensitivity = 0.360, Specificity = 0.701\n",
+      "Match sensitivity for reference: osa18 --> Sensitivity = 0.360, Specificity = 0.771\n",
+      "Match specificity for reference: osa18 --> Sensitivity = 0.411, Specificity = 0.710\n",
       "\n",
       "reference: psq --> Sensitivity = 0.822, Specificity = 0.251\n",
-      "Match sensitivity for reference: psq --> Sensitivity = 0.822, Specificity = 0.247\n",
-      "Match specificity for reference: psq --> Sensitivity = 0.804, Specificity = 0.251\n",
+      "Match sensitivity for reference: psq --> Sensitivity = 0.822, Specificity = 0.238\n",
+      "Match specificity for reference: psq --> Sensitivity = 0.804, Specificity = 0.255\n",
       "\n",
       "reference: ess --> Sensitivity = 0.364, Specificity = 0.636\n",
-      "Match sensitivity for reference: ess --> Sensitivity = 0.369, Specificity = 0.701\n",
-      "Match specificity for reference: ess --> Sensitivity = 0.444, Specificity = 0.636\n",
+      "Match sensitivity for reference: ess --> Sensitivity = 0.364, Specificity = 0.762\n",
+      "Match specificity for reference: ess --> Sensitivity = 0.458, Specificity = 0.636\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "models['best_model'].fit(xtrain, ytrain)\n",
+    "pred_proba = models['best_model'].predict_proba(xtest)[:, 1]\n",
+    "auc = metrics.roc_auc_score(ytest, pred_proba)\n",
+    "fpr, tpr, _ = metrics.roc_curve(ytest, pred_proba)\n",
+    "\n",
     "ref_sens_spec = {ref_metric: [] for ref_metric in reference_variables}\n",
     "\n",
     "for ref_metric in reference_variables:\n",
@@ -203,6 +272,15 @@
     "    sensitivity, specificity))\n",
     "    print('')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
